# smells-like-clean-telemetry

./: .env  .gitignore  CONTRIBUTING.md  README.md  compose.yaml  renovate.json
.github/workflows/: build-test.yml  detect-changes.yml  integration-test.yml  renovate-build-test.yml  renovate-daily.yml
auto/: .dockerignore  Dockerfile  build.gradle
auto/src/main/java/com/slct/demo/: DemoApplication.java  Song.java  SongController.java  SongRepository.java  SongService.java
auto/src/main/resources/: application.properties
express-auto/: app.js  instrumentation.js  package-lock.json  package.json
instrumentation-lib/: Cargo.toml  Dockerfile  db.rs  handlers.rs  main.rs  telemetry_conf.rs
manual/: Dockerfile  app.js  instrumentation.js  package-lock.json  package.json
manual-python/: Dockerfile  app.py  requirements.txt
otel-collector/: Dockerfile  ocb-manifest.yaml  otel-collector-config-datadog.yaml  otel-collector-config-jaeger.yaml
songs-db/: init-songs-db.sh
weaver/: README.md
weaver/docs/attributes/: README.md  media-content.md  otel-sdk.md
weaver/docs/entities/: README.md  container.md
weaver/docs/registry/: README.md
weaver/docs/registry/attributes/: README.md  code-attributes.md  media-content.md  otel-sdk.md
weaver/model/: attributes.yaml  registry_manifest.yaml  signals.yaml
weaver/src/: Attributes.java  attributes.py  attributes.rs
weaver/templates/registry/code/: Attributes.java.j2  attributes.py.j2  attributes.rs.j2  macros.j2  weaver.yaml
weaver/templates/registry/markdown/: attributes_readme.md.j2  enum_macros.j2  registry_readme.md.j2  weaver.yaml
