[package]
name = "demo"
edition = "2024"

[[bin]]
name = "demo"
path = "main.rs"

[dependencies]
actix-web = "4.12.1"
rustls = "0.23.35"
tokio-postgres = "0.7.15"
tokio = { version = "1.48.0", features = ["full"] }
awc = { version = "3.8.1", features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
urlencoding = "2.1.3"

opentelemetry-instrumentation-actix-web = { version = "0.23.0", features = ["awc"] }
opentelemetry = "0.31.0"
opentelemetry-appender-log = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-semantic-conventions = "0.31.0"
