[package]
name = "demo"
edition = "2024"

[[bin]]
name = "demo"
path = "main.rs"

[dependencies]
actix-web = "4.13.0"
rustls = "0.23.37"
tokio-postgres = "0.7.16"
tokio = { version = "1.49.0", features = ["full"] }
awc = { version = "3.8.2", features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
urlencoding = "2.1.3"

opentelemetry-instrumentation-actix-web = { version = "0.23.0", features = ["awc"] }
opentelemetry = "0.31.0"
opentelemetry-appender-log = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-semantic-conventions = "0.31.0"
